@@ -1,3 +1,7 @@
+2011-11-07  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer.pm (release): Always call finished_cb.
+	* installcheck/amcheck-device.pl: Add a check.
+
 2011-10-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/driverio.c (update_info_dumper): Set date to 0 if
 	  datestamp is 0.
